--- a/content/02.delete-me.md
+++ b/content/02.delete-me.md
@@ -96,6 +96,7 @@ Bare URL link: <https://manubot.org>
 [Manubot Homepage]: https://manubot.org
 
 ## Citations
+Citation on HiCPlus [@doi:10.1038/s41467-018-03113-2].
 
 Citation by DOI [@doi:10.7554/eLife.32822].
 
